Invisible images (issue)

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,108 +1,105 @@
-
-body{
-    margin: 0;
-    padding: 0;
+body {
+  margin: 0;
+  padding: 0;
 }
 
-.logo{
-    position: absolute;
-    float: left;
-    margin: -8px;
-    left: -16px;
+.logo {
+  position: absolute;
+  float: left;
+  margin: -8px;
+  left: -16px;
 }
 
-nav{
-    position: absolute;
-    width: 375px;
-    height: 52px;
-    background-color: #F7A100;
+nav {
+  position: absolute;
+  width: 375px;
+  height: 52px;
+  background-color: #f7a100;
 }
 
-nav ul{
-    position: relative;
-    float: right
+nav ul {
+  position: relative;
+  float: right;
 }
 
-ul li{
-    list-style-type: none;
-    display: inline-block;
+ul li {
+  list-style-type: none;
+  display: inline-block;
 }
 
-ul li a{
-    text-decoration: none;
-    padding: 10px;
-    color: white;
+ul li a {
+  text-decoration: none;
+  padding: 10px;
+  color: white;
 }
 
 /*----------- Block 1.1 --------------*/
 
-li.block1-1{
-    display: flex;
+li.block1-1 {
+  display: flex;
 }
 
 /* -------- (Omschrijving) ----------*/
 
-.container{
-    margin: 10px;
+.container {
+  margin: 10px;
 }
 
-#check{
-    display: none;
+#check {
+  display: none;
 }
 
-.content{
-    display: none;
-    transition: 0.5s linear;
+.content {
+  display: none;
+  transition: 0.5s linear;
 }
 
-label{
-    display: inline-block;
-    margin-top: 10px;
-    color: #0071B3;
-    text-decoration: underline;
-    cursor: pointer;
-    font-weight: 600;
+label {
+  display: inline-block;
+  margin-top: 10px;
+  color: #0071b3;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: 600;
 }
 
-#check:checked ~ .content{
-    display: block;
+#check:checked ~ .content {
+  display: block;
 }
-#check:checked ~ label{
-    visibility: hidden;
+#check:checked ~ label {
+  visibility: hidden;
 }
-#check:checked ~ label:after{
-    content:"Lees minder";
-    display:block;
-    visibility: visible;
+#check:checked ~ label:after {
+  content: "Lees minder";
+  display: block;
+  visibility: visible;
 }
 
 /*---------- Accordion -------------*/
 
 .accordion {
-    background-color: #eee;
-    color: black;
-    cursor: pointer;
-    align-content: center;
-    padding: 18px;
-    margin: 2px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 16px;
-    transition: 0.5s;
-  }
-  
-  .active, .accordion:hover {
-    background-color: #F7A100; 
-  }
-  
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-color: white;
-    overflow: hidden;
-  }
+  background-color: #eee;
+  color: black;
+  cursor: pointer;
+  align-content: center;
+  padding: 18px;
+  margin: 2px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 16px;
+  transition: 0.5s;
+}
 
+.active,
+.accordion:hover {
+  background-color: #f7a100;
+}
 
-
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
